src/test/ui/typeck/typeck-default-trait-impl-send-param.stderr
error[E0277]: `T` cannot be sent between threads safely
  --> $DIR/typeck-default-trait-impl-send-param.rs:5:5
   |
LL |     is_send::<T>()
   |     ^^^^^^^^^^^^ `T` cannot be sent between threads safely
   |
   = help: the trait `std::marker::Send` is not implemented for `T`
   = help: consider adding a `where T: std::marker::Send` bound
note: required by `is_send`
  --> $DIR/typeck-default-trait-impl-send-param.rs:8:1
   |
LL | fn is_send<T:Send>() {
   | ^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
